--- a/app/src/main/resources/nais/application_config.toml
+++ b/app/src/main/resources/nais/application_config.toml
@@ -1,3 +1,4 @@
-periodeTopic = ""
-opplysningerTopic = ""
-profileringTopic = ""
+periodeTopic = "paw.arbeidssokerperioder-beta-v6"
+opplysningerTopic = "paw.opplysninger-om-arbeidssoeker-beta-v6"
+profileringTopic = "paw.arbeidssoker-profilering-beta-v1"
+applicationIdSuffix = "v1"
