--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -11,8 +11,8 @@ spec:
       enabled: true
   image: {{ image }}
   replicas:
-    min: 0
-    max: 0
+    min: 1
+    max: 1
   resources:
     limits:
       cpu: 3500m
@@ -22,6 +22,7 @@ spec:
       memory: 200Mi
   kafka:
     pool: nav-dev
+    streams: true
   observability:
     tracing:
       enabled: true
