Endrer scope for aareg

--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -36,7 +36,7 @@ spec:
     - name: AAREG_URL
       value: https://aareg-services.prod-fss-pub.nais.io/api/v1/arbeidstaker/arbeidsforhold
     - name: AAREG_SCOPE
-      value: api://prod-fss.aareg.aareg-api/.default
+      value: api://prod-fss.arbeidsforhold.aareg-services-nais/.default
     - name: PDL_URL
       value: https://pdl-api.prod-fss-pub.nais.io/graphql
     - name: PDL_SCOPE
