--- a/app/src/main/resources/nais/application_config.toml
+++ b/app/src/main/resources/nais/application_config.toml
@@ -2,5 +2,4 @@ periodeTopic = "paw.arbeidssokerperioder-beta-v7"
 opplysningerTopic = "paw.opplysninger-om-arbeidssoeker-beta-v7"
 profileringTopic = "paw.arbeidssoker-profilering-beta-v1"
 applicationIdSuffix = "v1"
-periodeStateStoreName = "periodeStateStore"
-opplysningerStateStoreName = "opplysningerStateStore"
+joiningStateStoreName = "joiningStateStore"
