--- a/app/src/main/resources/local/application_config.toml
+++ b/app/src/main/resources/local/application_config.toml
@@ -1,5 +1,6 @@
 periodeTopic = "paw.arbeidssokerperioder-beta-v7
 opplysningerTopic = "paw.opplysninger-om-arbeidssoeker-beta-v7"
 profileringTopic = "paw.arbeidssoker-profilering-beta-v1"
+profileringGrunnlagTopic = "paw.arbeidssoeker-profilering-grunnlag-beta-v1"
 applicationIdSuffix = "v1"
 joiningStateStoreName = "joiningStateStore"
