Legger til Nais OpenTelemetry

--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -24,15 +24,10 @@ spec:
     pool: nav-dev
     streams: true
   observability:
-    tracing:
+    autoInstrumentation:
       enabled: true
+      runtime: java
   env:
-    - name: OTEL_METRICS_EXPORTER
-      value: "none"
-    - name: OTEL_TRACES_EXPORTER
-      value: "maskert_oltp"
-    - name: OTEL_JAVAAGENT_DEBUG
-      value: "false"
     - name: AAREG_URL
       value: https://aareg-services-q1.dev-fss-pub.nais.io/api/v1/arbeidstaker/arbeidsforhold
     - name: AAREG_SCOPE
