--- a/app/src/main/resources/local/application_config.toml
+++ b/app/src/main/resources/local/application_config.toml
@@ -1,6 +1,6 @@
-periodeTopic = "paw.arbeidssokerperioder-beta-v10
+periodeTopic = "paw.arbeidssokerperioder-beta-v10"
 opplysningerTopic = "paw.opplysninger-om-arbeidssoeker-beta-v10"
-profileringTopic = "paw.arbeidssoker-profilering-beta-v1"
-profileringGrunnlagTopic = "paw.arbeidssoeker-profilering-grunnlag-beta-v1"
-applicationIdSuffix = "v5"
+profileringTopic = "paw.arbeidssoker-profilering-beta-v10"
+profileringGrunnlagTopic = "paw.arbeidssoeker-profilering-grunnlag-beta-v10"
+applicationIdSuffix = "v6"
 joiningStateStoreName = "joiningStateStore"
