Endret til å konsumere fra v1 og produsere til beta-v15

--- a/app/src/main/resources/nais/application_config.toml
+++ b/app/src/main/resources/nais/application_config.toml
@@ -1,6 +1,6 @@
-periodeTopic = "paw.arbeidssokerperioder-beta-v14"
-opplysningerTopic = "paw.opplysninger-om-arbeidssoeker-beta-v14"
-profileringTopic = "paw.arbeidssoker-profilering-beta-v14"
-profileringGrunnlagTopic = "paw.arbeidssoeker-profilering-grunnlag-beta-v14"
-applicationIdSuffix = "v13"
+periodeTopic = "paw.arbeidssokerperioder-v1"
+opplysningerTopic = "paw.opplysninger-om-arbeidssoeker-v1"
+profileringTopic = "paw.arbeidssoker-profilering-beta-v15"
+profileringGrunnlagTopic = "paw.arbeidssoeker-profilering-grunnlag-beta-v15"
+applicationIdSuffix = "v14"
 joiningStateStoreName = "joiningStateStore"
