--- a/app/src/main/resources/nais/application_config.toml
+++ b/app/src/main/resources/nais/application_config.toml
@@ -1,6 +1,6 @@
 periodeTopic = "paw.arbeidssokerperioder-v1"
 opplysningerTopic = "paw.opplysninger-om-arbeidssoeker-v1"
-profileringTopic = "paw.arbeidssoker-profilering-beta-v15"
-profileringGrunnlagTopic = "paw.arbeidssoeker-profilering-grunnlag-beta-v15"
-applicationIdSuffix = "v15"
+profileringTopic = "paw.arbeidssoker-profilering-v1"
+profileringGrunnlagTopic = "paw.arbeidssoeker-profilering-grunnlag-v1"
+applicationIdSuffix = "release-v1"
 joiningStateStoreName = "joiningStateStore"
